appservices/domain/multiversion/charlie/deployment-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: charlie
    version: v2
  name: charlie-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: charlie
      version: v2
  template:
    metadata:
      labels:
        app: charlie
        version: v2
    spec:
      containers:
      - image: riveryc/app:v0.0.1
        name: charlie
        ports:
        - containerPort: 8000
