appservices/domain/multiversion/charlie/destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: charlie
spec:
  host: charlie
  # trafficPolicy:
  #   tls:
  #     mode: ISTIO_MUTUAL
  subsets:
  - name: v1
    labels:
      version: v1
  # - name: random-code
  #   labels:
  #     version: random-code
