appservices/domain/multiversion/charlie/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: charlie
spec:
  hosts:
  - charlie
  http:
  - match:
    - headers:
        awxVer:
          exact: v2
    route:
    - destination:
        host: charlie
        subset: v2
  - route:
    - destination:
        host: charlie
        subset: v1
